Fix text hint alignment

--- a/app/src/main/assets/math_text_view/css/math_text_view.css
+++ b/app/src/main/assets/math_text_view/css/math_text_view.css
@@ -35,6 +35,8 @@ div {
 
 .math-text-view:empty::before {
   content: attr(hint);
+  position: absolute;
+  margin-top: calc(0.02em + 0.8px);
   opacity: 0.5;
 }
 
